--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <div class="down">
       <h1 class="big-title">Supercharge your workflow</h1>
-      <p>We’ve got the tools to boost your productivity.</p>
+      <p class="down-description">We’ve got the tools to boost your productivity.</p>
     </div>
   </div>
 
